2004-01-19  Ross Burton  <ross@burtonini.com>

	* libgnomeui/gnome-icon-theme.c (gnome_icon_theme_finalize):
	Check that priv->gtk_theme is not NULL before unrefing it.

2004-01-18  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnomeui/libgnomeui.h: Added #include of gnome-window.h.

2004-01-18  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnomeui/gnome-app-helper.c: Handle "both-horiz" too.
	Patch from Bryan Forbes. Closes #125323.
	* libgnomeui/gnome-icon-theme.h: Merge fix for bug #119788.
	* libgnomeui/gnome-theme-parser.h:

2004-01-16  Federico Mena Quintero  <federico@ximian.com>

	Fix #124789:

	* libgnomeui/gnome-icon-item.c (gnome_icon_text_item_configure):
	Don't store the fontname, as it is ignored elsewhere anyway.
	(gnome_icon_text_item_destroy): Free the private structure.

	* libgnomeui/gnome-icon-list.c (gil_style_set): Don't pass a
	fontname parameter to gnome_icon_text_item_configure().
	(gil_realize): Don't copy the style.

2004-01-14  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.5.3

2004-01-08  David Coulthart  <davec@columbia.edu>

	* libgnomeui/gnome-authentication-manager.c (construct_full_password_dialog):
	s/gnome_keyring_is_availible/gnome_keyring_is_available/

2004-01-06  Alexander Larsson <alexl@redhat.com>

	* libgnomeui/gnome-icon-lookup.c (gnome_icon_lookup): 
	Treat image/svg+xml as svgs too.

Mon Jan 05 17:21:19 2004  George Lebl <jirka@5z.com>

	* libgnomeui/gnome-file-entry.c: make _set_default_path work if
	  the entry field is empty.  That is, set the file selector path
	  to this.

2004-01-04  Anders Carlsson  <andersca@gnome.org>

	* libgnomeui/gnome-password-dialog.h: Remove extra comma
	in enumeration. (#130505, Franz Klammer).

2003-12-30  Anders Carlsson  <andersca@gnome.org>

	* libgnomeui/gnome-druid.c (gnome_druid_remove): 
	Handle the last page being the current page when removing it, 
	(Fixes #85675, reported by Damon Chaplin).

2003-12-29  Christian Rose  <menthos@menthos.com>
